--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -22,10 +22,16 @@ jobs:
       - name: Run exporter
         run: python export_fgi.py
 
+      - name: List files
+        run: ls -lah
+
       - name: Commit CSV
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add fear_greed.csv
-          git commit -m "chore: update fear_greed.csv" || echo "No changes to commit"
-          git push
+          if [ -f fear_greed.csv ]; then
+            git add fear_greed.csv
+            git commit -m "chore: update fear_greed.csv" || echo "No changes to commit"
+            git push
+          else
+            echo "⚠️ Nenhum CSV foi gerado"
